Attempt to ship weidu.exe bundled with the app
I hate the hack of adding the exe to the repo, but the official release
is zipped, and I don't want to imagine how bad it is to unzip it on the
Windows VM with the console alone.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,6 +145,7 @@ jobs:
 
       - name: Run windeployqt
         run: |
+          cp resources/weidu.exe bin
           windeployqt bin/zeitgeist.exe
 
       - name: Upload portable app
